fixed alignment issue (idk why it happened)

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@
 body {
     font-family: 'Rubik', sans-serif;
     margin: 0%;
+    margin-left: 0.7vw;
     overflow-x: hidden;
 }
 
@@ -45,6 +46,7 @@ nav {
     width: 100vw;
     display: inline-flex;
     margin: 0%;
+    margin-left: -0.7vw;
     box-sizing: border-box;
     height: 10vh;
     max-height: 75px;
@@ -222,6 +224,7 @@ hamburger-menu {
     height: 91vh;
     overflow-y: auto;
     opacity: 1;
+    margin-left: -0.7vw;
 }
 
 #hamBlack {
